[project]
name = "calpost"
version = "0.0.0"
description = "Post-procesor for CALPUF output files"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{ name="Ramiro Espada Guerrero", email="espada@agro.uba.ar" }
]
dependencies = [
  "numpy >= 1.21.0"
]

[project.urls]
Homepage = "https://github.com/ramespada/calpuff-post"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

